# DiscordBot

./: CMakeLists.txt  CMakeSettings.json  DiscordBot.sln  DiscordBot.vcxproj  DiscordBot.vcxproj.filters  LICENSE  README.md
.github/workflows/: main.yml
inlcude/: DiscordBot.h
source/: DiscordBot.cpp
src/: bot.cpp
